--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "release": {
     "branches": [
-      "master"
+      "main"
     ],
     "plugins": [
       "@semantic-release/commit-analyzer",
