--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -22,7 +22,7 @@ jobs:
         run: npm i --non-interactive --pure-lockfile
       - name: Release
         env:
-          GITHUB_TOKEN: ${{secrets.GH_TOKEN}}
+          GH_TOKEN: ${{secrets.GH_TOKEN}}
           GIT_AUTHOR_NAME: ${{secrets.BOT_USERNAME}}
           GIT_COMMITTER_NAME: ${{secrets.BOT_USERNAME}}
           GIT_AUTHOR_EMAIL: ${{secrets.BOT_EMAIL}}
