--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,6 +32,7 @@ jobs:
           GITHUB_TOKEN: ${{secrets.GH_TOKEN}}
         run: |
           tag_name="${GITHUB_REF##*/}"
+          brew install hub
           hub release edit $(find dist -type f -name "*.tar.gz" -printf "-a %p ") -a "dist/checksums.txt" -m "" "$tag_name"
       - name: Upload Homebrew formula
         env:
