--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -47,9 +47,9 @@ jobs:
           cp -f homebrew/Formula/pace.rb homebrew-cli
           cd homebrew-cli
           git add .
-          git commit -m "Release brew formula for Pace CLI ${tag_name}"
+          git commit -m "Release brew formula for PACE CLI ${tag_name}"
           git push
-          git tag -a "${tag_name}" -m "Release brew formula for Pace CLI ${tag_name}"
+          git tag -a "${tag_name}" -m "Release brew formula for PACE CLI ${tag_name}"
           git push --tags
       - name: Update CLI docs
         env:
