--- a/renovate.json5
+++ b/renovate.json5
@@ -14,7 +14,8 @@
       "matchStrings": [
         "^(?<depName>buf\\.build\\/gen\\/go\\/getstrm\\/pace.*?)\\sv(?<currentValue>.*?)$"
       ],
-      "datasourceTemplate": "go",
+      // Do not use GOPROXY but go directly to the specified go module registry
+      "datasourceTemplate": "go-direct",
       // Version extracted from Go Module Registry
       "extractVersionTemplate": "^v(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-.*\\.(?<revision>\\d+)$",
       // Version extracted from go.mod
