--- a/renovate.json5
+++ b/renovate.json5
@@ -22,6 +22,9 @@
       "versioningTemplate": "regex:^v(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-.*\\.(?<revision>\\d+)$"
     }
   ],
+  "customEnvVariables": {
+    "GOPROXY": "https://buf.build/gen/go,direct"
+  },
   packageRules: [
     {
       matchManagers: [
