chore(main): use datasource go with proxy for renovate

--- a/renovate.json5
+++ b/renovate.json5
@@ -22,6 +22,8 @@
     }
   ],
   "customEnvVariables": {
+    "GOPRIVATE": "buf.build/gen/go",
+    "GONOSUMDB": "buf.build/gen/go",
     "GOPROXY": "https://buf.build/gen/go,direct"
   },
   packageRules: [
