--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
   "devDependencies": {
-    "@commitlint/config-conventional": "^12.1.1",
-    "@google/semantic-release-replace-plugin": "^1.0.2",
-    "@semantic-release/changelog": "5.0.1",
-    "@semantic-release/exec": "^5.0.0",
-    "@semantic-release/git": "9.0.0",
-    "@semantic-release/github": "^7.2.3",
-    "commitlint": "12.1.1",
-    "conventional-changelog-conventionalcommits": "4.5.0",
-    "cz-conventional-changelog": "^3.3.0",
-    "gradle-semantic-release-plugin": "1.4.17",
-    "husky": "^6.0.0",
-    "semantic-release": "17.4.2"
+    "@commitlint/config-conventional": "17.8.1",
+    "semantic-release-replace-plugin": "1.2.7",
+    "@semantic-release/changelog": "6.0.3",
+    "@semantic-release/exec": "6.0.3",
+    "@semantic-release/git": "10.0.1",
+    "@semantic-release/github": "9.2.1",
+    "commitlint": "17.6.7",
+    "conventional-changelog-conventionalcommits": "6.1.0",
+    "cz-conventional-changelog": "3.3.0",
+    "husky": "8.0.3",
+    "semantic-release": "21.0.9"
   },
   "scripts": {
     "postinstall": "husky install",
@@ -38,7 +37,7 @@
     ]
   },
   "engines": {
-    "node": "^12.12.0"
+    "node": "^20.0.0"
   },
   "config": {
     "commitizen": {
