--- a/renovate.json5
+++ b/renovate.json5
@@ -8,7 +8,7 @@
         "gomod"
       ],
       matchPackagePrefixes: [
-        "build.buf.gen"
+        "buf.build/gen/go"
       ],
       versioning: "regex:^v(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-(?<compatibility>.*)\\.(?<revision>\\d+)$"
     }
