--- a/renovate.json5
+++ b/renovate.json5
@@ -10,7 +10,7 @@
       matchPackagePrefixes: [
         "buf.build/gen/go"
       ],
-      versioning: "regex:^v(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-(?<compatibility>.*)\\.(?<revision>\\d+)$"
+      versioning: "regex:^v(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-(?<compatibility>.*)\\.(?<build>\\d+)$"
     }
   ]
 }
