chore(main): don't use digest for buf.build

--- a/renovate.json5
+++ b/renovate.json5
@@ -10,6 +10,7 @@
       matchPackagePrefixes: [
         "buf.build/gen/go"
       ],
+      digest: false,
       versioning: "regex:^v(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-(?<compatibility>.*)\\.(?<build>\\d+)$"
     }
   ]
