chore(main): revert don't extend shared renovate config

--- a/renovate.json5
+++ b/renovate.json5
@@ -1,7 +1,7 @@
 {
-//  "extends": [
-//    "github>getstrm/renovate-config//base-renovate-config.json5"
-//  ],
+  "extends": [
+    "github>getstrm/renovate-config//base-renovate-config.json5"
+  ],
   packageRules: [
     {
       matchManagers: [
