chore(main): try not to use goproxy for fetching buf dependencies

--- a/renovate.json5
+++ b/renovate.json5
@@ -2,6 +2,11 @@
   "extends": [
     "github>getstrm/renovate-config//base-renovate-config.json5"
   ],
+  "customEnvVariables": {
+    "GOPRIVATE": "buf.build/gen/go",
+    "GONOSUMDB": "buf.build/gen/go",
+    "GOPROXY": "https://buf.build/gen/go,direct"
+  },
   packageRules: [
     {
       matchManagers: [
@@ -10,7 +15,6 @@
       matchPackagePrefixes: [
         "buf.build/gen/go"
       ],
-      digest: false,
       versioning: "regex:^v(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-(?<compatibility>.*)\\.(?<build>\\d+)$"
     }
   ]
