--- a/renovate.json5
+++ b/renovate.json5
@@ -10,7 +10,8 @@
       matchPackagePrefixes: [
         "buf.build/gen/go"
       ],
-      versioning: "regex:^v(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-(?<compatibility>.*)(?<digest>\\.)(?<build>\\d+)$"
+      extractVersion: "(?<version>\\d+\\.\\d+\\.\\d+-.*\\.\\d+)$",
+      versioning: "regex:(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-(?<compatibility>.*)\\.(?<build>\\d+)$"
     }
   ]
 }
