--- a/renovate.json5
+++ b/renovate.json5
@@ -2,16 +2,66 @@
   "extends": [
     "github>getstrm/renovate-config//base-renovate-config.json5"
   ],
+  "customManagers": [
+    {
+      // Renovate cannot update build.buf.gen dependencies through the regular Go datasource manager,
+      // therefore, a custom regex manager is needed.
+      "customType": "regex",
+      "fileMatch": [
+        "go.mod$"
+      ],
+      // Via named capturing groups, we extract the buf.build generated dependency name and the current version
+      "matchStrings": [
+        // e.g. currentValue = v1.3.0-20231121141154-e945a7aece2d.2
+        "^(?<depName>buf\\.build\\/gen\\/go\\/getstrm\\/pace.*?)\\s(?<currentValue>v.*?)$"
+      ],
+      "datasourceTemplate": "go",
+      // Version extracted from Go Module Registry
+      "extractVersionTemplate": "^v(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-.*\\.(?<compatibility>\\d+)$",
+      // Version extracted from go.mod
+      "versioningTemplate": "regex:^v(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-.*\\.(?<compatibility>\\d+)$"
+    }
+  ],
   packageRules: [
     {
       matchManagers: [
-        "gomod"
+        "regex"
       ],
       matchPackagePrefixes: [
-        "buf.build/gen/go"
+        "build.buf.gen"
       ],
-      extractVersion: "(?<version>\\d+\\.\\d+\\.\\d+-.*\\.\\d+)$",
-      versioning: "regex:(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-(?<compatibility>.*)\\.(?<build>\\d+)$"
+      matchUpdateTypes: [
+        "major"
+      ],
+      groupName: "grpc-protobuf major dependencies",
+      groupSlug: "grpc-protobuf",
+      automerge: false,
+      addLabels: [
+        "major",
+        "grpc-protobuf",
+        "go"
+      ]
+    },
+    {
+      matchManagers: [
+        "regex"
+      ],
+      matchPackagePrefixes: [
+        "build.buf.gen"
+      ],
+      matchUpdateTypes: [
+        "minor",
+        "patch"
+      ],
+      groupName: "grpc-protobuf non-major dependencies",
+      groupSlug: "non-major-grpc-protobuf",
+      automerge: true,
+      platformAutomerge: true,
+      addLabels: [
+        "minor-patch",
+        "grpc-protobuf",
+        "go"
+      ]
     }
   ]
 }
